syntax = "proto3";
package shop; 
option go_package = "github.com/aph138/shop/user_grpc";
import "common.proto";
service User{
    rpc Signin (SigninRequest) returns (StringMessage) {}
    rpc Signup (SignupRequest) returns (StringMessage) {}
    rpc UserList(Empty) returns (stream UserListResponse){}
    rpc GetUser(StringMessage) returns(GetUserResponse){}
    rpc DeleteUser(StringMessage) returns (BoolMessage){}
    rpc EditUser(EditUserRequest) returns(BoolMessage){}
    rpc ChangePassword(ChangePasswordRequest) returns (BoolMessage){}
}

message ChangePasswordRequest{
     string id=1;
     string oldPassword=2;
     string newPassword=3;
}
message Address{
     string address=1;
     string phone=2;
}
message EditUserRequest{
     string id=1;
     string email=2;
     Address address=3;
}
message GetUserResponse{
     string username=1;
     string email=2;
     uint32 role=3;
     bool status=4;
     Address address=5;
}
message SigninRequest{
     string username=1;
     string password=2;
}
message SignupRequest{
     string username=1;
     string email=2;
     string password=3;
     uint32 role=4;
}

message UserListResponse{
     string id=1;
     string username=2;
     string email=3;
     uint32 role=4;
     bool status=5;
}